hw6-optional 2-3